@@ -1,37 +1,48 @@
 ---
-title: 'Azure Toolkit for IntelliJ：为 HDInsight 群集创建 Spark 应用程序 '
-description: 使用用于 IntelliJ 的 Azure 工具包开发以 Scala 编写的 Spark 应用程序，并将其提交到 HDInsight Spark 群集。
+title: 教程 - Azure Toolkit for IntelliJ：为 HDInsight 群集创建 Spark 应用程序
+description: 教程 - 使用 Azure Toolkit for IntelliJ 开发以 Scala 编写的 Spark 应用程序，并将其提交到 HDInsight Spark 群集。
 author: hrasheed-msft
 ms.reviewer: jasonh
 ms.service: hdinsight
 ms.custom: hdinsightactive
-ms.topic: conceptual
-ms.date: 02/15/2019
-ms.author: maxluk
-ms.openlocfilehash: 94cc41890778e842cb2e4bd6e06b90361cbef1cd
-ms.sourcegitcommit: 41ca82b5f95d2e07b0c7f9025b912daf0ab21909
-ms.translationtype: MT
+ms.topic: tutorial
+ms.date: 06/26/2019
+ms.author: hrasheed
+ms.openlocfilehash: 0a434246791e73e24af1ffe7abd722f5265ca5b6
+ms.sourcegitcommit: aa66898338a8f8c2eb7c952a8629e6d5c99d1468
+ms.translationtype: HT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 06/13/2019
-ms.locfileid: "67066457"
+ms.lasthandoff: 06/28/2019
+ms.locfileid: "67462397"
 ---
-# <a name="use-azure-toolkit-for-intellij-to-create-apache-spark-applications-for-an-hdinsight-cluster"></a>使用 Azure Toolkit for IntelliJ 为 HDInsight 群集创建 Apache Spark 应用程序
+# <a name="tutorial-use-azure-toolkit-for-intellij-to-create-apache-spark-applications-for-an-hdinsight-cluster"></a>教程：使用 Azure Toolkit for IntelliJ 为 HDInsight 群集创建 Apache Spark 应用程序
 
-使用用于 IntelliJ 的 Azure 工具包插件开发以  [Scala](https://www.scala-lang.org/) 编写的 [Apache Spark](https://spark.apache.org/) 应用程序，并直接从 IntelliJ 集成开发环境 (IDE) 将其提交到 HDInsight Spark 群集。 可按多种方式使用该插件：
+本教程演示如何使用 Azure Toolkit for IntelliJ 插件开发以 [Scala](https://www.scala-lang.org/) 编写的 Apache Spark 应用程序，并直接从 IntelliJ 集成开发环境 (IDE) 将其提交到 HDInsight Spark 群集。 可按多种方式使用该插件：
 
 * 在 HDInsight Spark 群集中开发和提交 Scala Spark 应用程序。
 * 访问 Azure HDInsight Spark 群集资源。
 * 本地开发和运行 Scala Spark 应用程序。
 
-## <a name="prerequisites"></a>必备组件
+本教程介绍如何执行下列操作：
+> [!div class="checklist"]
+> * 使用 Azure Toolkit for IntelliJ 插件
+> * 开发 Apache Spark 应用程序
+> * 将应用程序提交到 Azure HDInsight 群集
+
+## <a name="prerequisites"></a>先决条件
 
 * HDInsight 上的 Apache Spark 群集。 有关说明，请参阅[在 Azure HDInsight 中创建 Apache Spark 群集](apache-spark-jupyter-spark-sql.md)。
+
 * [Oracle Java 开发工具包](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html)。  本教程使用 Java 版本 8.0.202。
+
 * IntelliJ IDEA。 本文使用 [IntelliJ IDEA Community 版本2018.3.4](https://www.jetbrains.com/idea/download/)。
+
 * Azure Toolkit for IntelliJ。  请参阅[安装 Azure Toolkit for IntelliJ](https://docs.microsoft.com/java/azure/intellij/azure-toolkit-for-intellij-installation?view=azure-java-stable)。
+
 * WINUTILS.EXE。  请参阅[在 Windows 上运行 Hadoop 时遇到的问题](https://wiki.apache.org/hadoop/WindowsProblems)。
 
 ## <a name="install-scala-plugin-for-intellij-idea"></a>安装适用于 IntelliJ IDEA 的 Scala 插件
+
 执行以下步骤安装 Scala 插件：
 
 1. 打开 IntelliJ IDEA。
@@ -45,7 +56,6 @@ ms.locfileid: "67066457"
     ![安装 scala 插件](./media/apache-spark-intellij-tool-plugin/install-scala-plugin.png)
 
 4. 成功安装该插件后，必须重启 IDE。
-
 
 ## <a name="create-a-spark-scala-application-for-an-hdinsight-spark-cluster"></a>为 HDInsight Spark 群集创建 Spark Scala 应用程序
 
@@ -65,7 +75,7 @@ ms.locfileid: "67066457"
 
 6. 在“新建项目”窗口中提供以下信息：   
 
-    |  属性   | 描述   |  
+    |  属性   | 说明   |  
     | ----- | ----- |  
     |项目名称| 输入名称。  本教程使用 `myApp`。|  
     |项目位置&nbsp;| 输入所需的位置用于保存项目。|
@@ -133,16 +143,15 @@ ms.locfileid: "67066457"
    
    ![“Azure 资源管理器”链接](./media/apache-spark-intellij-tool-plugin/explorer-rightclick-azure.png)
 
-
-3. 在中**Azure 登录**对话框框中，选择**设备登录**，然后选择**登录**。
+3. 在“Azure 登录”  对话框中，依次选择“设备登录”、“登录”   。
 
     ![“Azure 登录”对话框](./media/apache-spark-intellij-tool-plugin/view-explorer-2.png)
 
-4. 在中**Azure 设备登录名**对话框中，单击**复制并打开**。
+4. 在“Azure 设备登录”对话框中单击“复制并打开”。  
    
    ![“Azure 登录”对话框](./media/apache-spark-intellij-tool-plugin/view-explorer-5.png)
 
-5. 在浏览器界面中，粘贴代码，然后依次**下一步**。
+5. 在浏览器界面中粘贴代码，然后单击“下一步”  。
    
    ![“Azure 登录”对话框](./media/apache-spark-intellij-tool-plugin/view-explorer-6.png)
 
@@ -154,7 +163,7 @@ ms.locfileid: "67066457"
 
     ![“选择订阅”对话框](./media/apache-spark-intellij-tool-plugin/Select-Subscriptions.png)
 
-8. 从**Azure 资源管理器**，展开**HDInsight**若要查看你的订阅中的 HDInsight Spark 群集。
+8. 在“Azure 资源管理器”中展开“HDInsight”，查看订阅中的 HDInsight Spark 群集。  
 
     ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-3.png)
 
@@ -163,6 +172,7 @@ ms.locfileid: "67066457"
     ![展开的群集名称节点](./media/apache-spark-intellij-tool-plugin/view-explorer-4.png)
 
 ### <a name="link-a-cluster"></a>链接群集
+
 可以使用 Apache Ambari 管理的用户名链接 HDInsight 群集。 同样，对于已加入域的 HDInsight 群集，也可使用这种域和用户名（例如 user1@contoso.com）进行链接。 也可链接 Livy 服务群集。
 
 1. 在菜单栏中，导航到“视图” > “工具窗口” > “Azure 资源管理器”。   
@@ -183,7 +193,7 @@ ms.locfileid: "67066457"
         |用户名| 输入群集用户名，默认为 admin。|
         |密码| 输入用户名的密码。|
     
-        ![链接 HdInsight 群集对话框](./media/apache-spark-intellij-tool-plugin/link-hdinsight-cluster-dialog.png)
+        ![链接 HDInsight 群集对话框](./media/apache-spark-intellij-tool-plugin/link-hdinsight-cluster-dialog.png)
 
     * **Livy 服务**  
   
@@ -197,7 +207,7 @@ ms.locfileid: "67066457"
         |用户名| 输入群集用户名，默认为 admin。|
         |密码| 输入用户名的密码。|
 
-        ![链接 Livy 群集对话框](./media/apache-spark-intellij-tool-plugin/link-livy-cluster-dialog.png)
+        ![链接 livy 群集对话框](./media/apache-spark-intellij-tool-plugin/link-livy-cluster-dialog.png)
 
 1. 在“HDInsight”节点中可以看到链接的群集。 
 
@@ -208,6 +218,7 @@ ms.locfileid: "67066457"
    ![取消链接的群集](./media/apache-spark-intellij-tool-plugin/unlink.png)
 
 ## <a name="run-a-spark-scala-application-on-an-hdinsight-spark-cluster"></a>在 HDInsight Spark 群集中运行 Spark Scala 应用程序
+
 创建 Scala 应用程序后，可将其提交到群集。
 
 1. 在“项目”中，导航到“myApp” > “src” > “main” > “scala” > “myApp”。       右键单击“myApp”，然后选择“提交 Spark 应用程序”（可能位于列表底部）。  
@@ -225,23 +236,25 @@ ms.locfileid: "67066457"
     |Main 类名|默认值是所选文件中的主类。 可选择省略号 (...) 并选择其他类来更改类  。|
     |作业配置|可以更改默认的键和/或值。 有关详细信息，请参阅 [Apache Livy REST API](https://livy.incubator.apache.org./docs/latest/rest-api.html)。|
     |命令行参数|如果需要，可为 main 类输入参数并以空格分隔。|
-    |引用的 Jar 和引用的文件|（如果有的话）可以输入引用的 Jar 和文件的路径。 更多相关信息：[Apache Spark 配置](https://spark.apache.org/docs/latest/configuration.html#runtime-environment)。  另请参阅[如何将资源上传到群集](https://docs.microsoft.com/azure/storage/blobs/storage-quickstart-blobs-storage-explorer)。|
+    |引用的 Jar 和引用的文件|（如果有的话）可以输入引用的 Jar 和文件的路径。 还可以在 Azure 虚拟文件系统中浏览文件，但目前仅支持 ADLS 第 2 代群集。 更多相关信息：[Apache Spark 配置](https://spark.apache.org/docs/latest/configuration.html#runtime-environment)。  另请参阅[如何将资源上传到群集](https://docs.microsoft.com/azure/storage/blobs/storage-quickstart-blobs-storage-explorer)。|
     |作业上传存储|展开以显示其他选项。|
     |存储类型|从下拉列表中选择“使用 Azure Blob 上传”。 |
     |存储帐户|输入存储帐户。|
     |存储密钥|输入存储密钥。|
     |存储容器|输入“存储帐户”和“存储密钥”后，从下拉列表中选择你的存储容器。  |
 
-    ![“Spark 提交”对话框](./media/apache-spark-intellij-tool-plugin/hdi-submit-spark-app-2.png)
+    ![“Spark 提交”对话框](./media/apache-spark-intellij-tool-plugin/hdi-submit-spark-app-02.png)
 
 4. 选择“SparkJobRun”将项目提交到所选群集  。 “群集中的远程 Spark 作业”选项卡在底部显示作业执行进度  。 可通过单击红色按钮来停止应用程序。 若要了解如何访问作业输出，请参阅本文稍后的“使用用于 IntelliJ 的 Azure 工具包访问和管理 HDInsight Spark 群集”部分。  
       
     ![“Spark 提交”窗口](./media/apache-spark-intellij-tool-plugin/hdi-spark-app-result.png)
 
 ## <a name="debug-apache-spark-applications-locally-or-remotely-on-an-hdinsight-cluster"></a>本地或远程调试 HDInsight 群集上的 Apache Spark 应用程序 
+
 我们还建议以另一种方式将 Spark 应用程序提交到群集。 为此，可在“运行/调试配置”  IDE 中设置参数。 有关详细信息，请参阅[使用用于 IntelliJ 的 Azure 工具包通过 SSH 本地或远程调试 HDInsight 群集上的 Apache Spark 应用程序](apache-spark-intellij-tool-debug-remotely-through-ssh.md)。
 
 ## <a name="access-and-manage-hdinsight-spark-clusters-by-using-azure-toolkit-for-intellij"></a>使用用于 IntelliJ 的 Azure 工具包访问和管理 HDInsight Spark 群集
+
 可以使用用于 IntelliJ 的 Azure 工具包执行各种操作。  大多数操作都是从“Azure 资源管理器”发起的。   在菜单栏中，导航到“视图” > “工具窗口” > “Azure 资源管理器”。   
 
 ### <a name="access-the-job-view"></a>访问作业视图
@@ -278,6 +291,7 @@ ms.locfileid: "67066457"
 2. 出现提示时，请输入群集的管理员凭据。 在群集设置过程中已指定这些凭据。
 
 ### <a name="manage-azure-subscriptions"></a>管理 Azure 订阅
+
 默认情况下，用于 IntelliJ 的 Azure 工具包将列出所有 Azure 订阅中的 Spark 群集。 如果需要，可以指定想要访问的订阅。  
 
 1. 在 Azure 资源管理器中右键单击“Azure”根节点，然后选择“选择订阅”。    
@@ -285,9 +299,11 @@ ms.locfileid: "67066457"
 2. 在“选择订阅”窗口中，清除不想要访问的订阅旁边的复选框，然后选择“关闭”。  
 
 ## <a name="spark-console"></a>Spark Console
+
 可运行 Spark Local Console(Scala) 或运行 Spark Livy Interactive Session Console(Scala)。
 
 ### <a name="spark-local-consolescala"></a>Spark Local Console(Scala)
+
 确保满足 WINUTILS.EXE 先决条件。
 
 1. 在菜单栏中，导航到“运行” > “编辑配置...”。  
@@ -320,8 +336,8 @@ ms.locfileid: "67066457"
 
     ![Local Console 结果](./media/apache-spark-intellij-tool-plugin/local-console-result.png)
 
-
 ### <a name="spark-livy-interactive-session-consolescala"></a>Spark Livy Interactive Session Console(Scala)
+
 它仅在 IntelliJ 2018.2 和 2018.3 上受支持。
 
 1. 在菜单栏中，导航到“运行” > “编辑配置...”。  
@@ -353,60 +369,57 @@ ms.locfileid: "67066457"
 
    ![将选定内容发送到 Spark Console](./media/apache-spark-intellij-tool-plugin/send-selection-to-console.png)
 
-## <a name="reader-only-role"></a>仅读取器角色
-当用户提交作业具有仅限读取器的角色权限的群集时，Ambari 凭据是必需的。
+## <a name="reader-only-role"></a>仅限读取者角色
 
-### <a name="link-cluster-from-context-menu"></a>从上下文菜单的链接群集
+当用户使用仅限读取者的角色权限将作业提交到群集时，必须提供 Ambari 凭据。
 
-1. 仅读取器角色帐户登录。
+### <a name="link-cluster-from-context-menu"></a>从上下文菜单链接群集
+
+1. 使用仅限读取者角色帐户登录。
        
-2. 从**Azure 资源管理器**，展开**HDInsight**若要查看订阅中的 HDInsight 群集。 分类标记 **"读取者角色:"** 只有仅读取器角色的权限。
+2. 在“Azure 资源管理器”中展开“HDInsight”，查看订阅中的 HDInsight 群集。   标记为“角色:读取者”的群集只有仅限读取者角色权限。 
 
     ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-15.png)
 
-3. 右键单击具有仅限读取器的角色权限的群集。 选择**链接此群集**从上下文菜单以链接群集。 输入 Ambari 用户名和密码。
+3. 右键单击具有仅限读取者角色权限的群集。 从上下文菜单中选择“链接此群集”以链接群集。  输入 Ambari 用户名和密码。
 
   
     ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-11.png)
 
-4. 如果已成功链接群集，HDInsight 将刷新。
-   在群集的阶段将成为链接。
+4. 如果已成功链接群集，HDInsight 将会刷新。
+   群集阶段将变为链接状态。
   
     ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-8.png)
 
+### <a name="link-cluster-by-expanding-jobs-node"></a>通过展开“作业”节点来链接群集
 
-
-### <a name="link-cluster-by-expanding-jobs-node"></a>通过展开作业节点的链接群集
-
-1. 单击**作业**节点，**群集作业访问被拒绝**弹出窗口。
+1. 单击“作业”节点，此时会弹出“群集作业访问被拒绝”窗口。  
    
-2. 单击**链接此群集**以链接群集。
+2. 单击“链接此群集”以链接群集。 
    
     ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-9.png)
 
-### <a name="link-cluster-from-rundebug-configurations-window"></a>从运行/调试配置窗口的链接群集
+### <a name="link-cluster-from-rundebug-configurations-window"></a>从“运行/调试配置”窗口链接群集
 
-1. 创建 HDInsight 配置。 然后选择**在群集中远程运行**。
+1. 创建一个 HDInsight 配置。 然后选择“在群集中远程运行”。 
    
-2. 选择群集，其中包含仅读取器角色的权限对于**Spark 群集 (仅限 Linux)** 。 警告消息显示出了。可以单击**链接此群集**以链接群集。
+2. 对于“Spark 群集(仅限 Linux)”，请选择一个具有仅限读取者角色权限的群集。  此时会显示警告消息。可以单击“链接此群集”以链接群集。 
    
    ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/create-config-1.png)
    
 ### <a name="view-storage-accounts"></a>查看存储帐户
 
-* 与仅读取器角色权限的群集，请单击**存储帐户**节点，**存储访问被拒绝**弹出窗口。 可以单击**打开 Azure 存储资源管理器**以打开存储资源管理器。
+* 对于具有仅限读取者角色权限的群集，请单击“存储帐户”节点，此时会弹出“存储访问被拒绝”窗口。   可以单击“打开 Azure 存储资源管理器”以打开存储资源管理器。 
      
    ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-14.png)
 
    ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-10.png)
 
-* 链接群集，请单击**存储帐户**节点，**存储访问被拒绝**弹出窗口。 可以单击**打开 Azure 存储**以打开存储资源管理器。
+* 对于链接的群集，请单击“存储帐户”节点，此时会弹出“存储访问被拒绝”窗口。   可以单击“打开 Azure 存储”以打开存储资源管理器。 
      
    ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-13.png)
 
-
    ![Azure 资源管理器中的 HDInsight Spark 群集](./media/apache-spark-intellij-tool-plugin/view-explorer-12.png)
-  
 
 ## <a name="convert-existing-intellij-idea-applications-to-use-azure-toolkit-for-intellij"></a>转换现有 IntelliJ IDEA 应用程序以使用用于 IntelliJ 的 Azure 工具包
 
@@ -424,70 +437,25 @@ ms.locfileid: "67066457"
 
 3. 保存更改。 现在，应用程序应与用于 IntelliJ 的 Azure 工具包兼容。 可以通过右键单击“项目”中的项目名称来测试此项。 弹出菜单现在将包含选项“将 Spark 应用程序提交到 HDInsight”  。
 
-## <a name="troubleshooting"></a>故障排除
+## <a name="clean-up-resources"></a>清理资源
 
-### <a name="error-in-local-run-use-a-larger-heap-size"></a>本地运行出错：“请使用更大的堆大小” 
-在 Spark 1.6 中，如果在本地运行期间使用 32 位 Java SDK，可能会遇到以下错误：
+如果不打算继续使用此应用程序，请使用以下步骤删除创建的群集：
 
-    Exception in thread "main" java.lang.IllegalArgumentException: System memory 259522560 must be at least 4.718592E8. Please use a larger heap size.
-        at org.apache.spark.memory.UnifiedMemoryManager$.getMaxMemory(UnifiedMemoryManager.scala:193)
-        at org.apache.spark.memory.UnifiedMemoryManager$.apply(UnifiedMemoryManager.scala:175)
-        at org.apache.spark.SparkEnv$.create(SparkEnv.scala:354)
-        at org.apache.spark.SparkEnv$.createDriverEnv(SparkEnv.scala:193)
-        at org.apache.spark.SparkContext.createSparkEnv(SparkContext.scala:288)
-        at org.apache.spark.SparkContext.<init>(SparkContext.scala:457)
-        at LogQuery$.main(LogQuery.scala:53)
-        at LogQuery.main(LogQuery.scala)
-        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
-        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-        at java.lang.reflect.Method.invoke(Method.java:606)
-        at com.intellij.rt.execution.application.AppMain.main(AppMain.java:144)
+1. 登录到 [Azure 门户](https://portal.azure.com/)。
 
-之所以发生这些错误，是因为堆大小不足，导致 Spark 无法运行。 Spark 至少需要 471 MB。 （有关详细信息，请参阅 [SPARK-12081](https://issues.apache.org/jira/browse/SPARK-12081)。）一个简单的解决方法就是使用 64 位 Java SDK。 也可以通过添加以下选项来更改 IntelliJ 中的 JVM 设置：
+1. 在顶部的“搜索”框中，键入 **HDInsight**。 
 
-    -Xms128m -Xmx512m -XX:MaxPermSize=300m -ea
+1. 选择“服务”下的“HDInsight 群集”   。
 
-![将选项添加到 IntelliJ 中的“VM 选项”对话框](./media/apache-spark-intellij-tool-plugin/change-heap-size.png)
+1. 在显示的 HDInsight 群集列表中，选择为本教程创建的群集旁边的“...”。 
 
-## <a name="faq"></a>常见问题解答
-如果群集正忙，可能会收到以下错误。
+1. 选择“删除”。  请选择“是”。 
 
-![Intellij 在群集忙时收到错误](./media/apache-spark-intellij-tool-plugin/intellij-interactive-cluster-busy-upload.png)
+![删除 HDInsight 群集](./media/apache-spark-intellij-tool-plugin/hdinsight-azure-portal-delete-cluster.png "删除 HDInsight 群集")
 
-![Intellij 在群集忙时收到错误](./media/apache-spark-intellij-tool-plugin/intellij-interactive-cluster-busy-submit.png)
+## <a name="next-steps"></a>后续步骤
 
-## <a name="known-issues"></a>已知问题
+本教程介绍了如何使用 Azure Toolkit for IntelliJ 插件开发以 [Scala](https://www.scala-lang.org/) 编写的 Apache Spark 应用程序，并直接从 IntelliJ 集成开发环境 (IDE) 将其提交到 HDInsight Spark 群集。 请转到下一篇文章，了解如何将在 Apache Spark 中注册的数据拉取到 Power BI 等 BI 分析工具中。
 
-目前不支持直接查看 Spark 输出。
-
-## <a name="seealso"></a>后续步骤
-
-* [概述：Azure HDInsight 上的 Apache Spark](apache-spark-overview.md)
-
-### <a name="demo"></a>演示
-* 创建 Scala 项目（视频）：[Create Apache Spark Scala Applications](https://channel9.msdn.com/Series/AzureDataLake/Create-Spark-Applications-with-the-Azure-Toolkit-for-IntelliJ)（创建 Apache Spark Scala 应用程序）
-* 远程调试（视频）：[使用 Azure Toolkit for IntelliJ 远程调试 HDInsight 群集上的 Apache Spark 应用程序](https://channel9.msdn.com/Series/AzureDataLake/Debug-HDInsight-Spark-Applications-with-Azure-Toolkit-for-IntelliJ)
-
-### <a name="scenarios"></a>方案
-* [Apache Spark 与 BI：将 HDInsight 中的 Spark 与 BI 工具配合使用来执行交互式数据分析](apache-spark-use-bi-tools.md)
-* [Apache Spark 与机器学习：使用 HDInsight 中的 Spark 来通过 HVAC 数据分析建筑物温度](apache-spark-ipython-notebook-machine-learning.md)
-* [Apache Spark 与机器学习：使用 HDInsight 中的 Spark 预测食品检验结果](apache-spark-machine-learning-mllib-ipython.md)
-* [使用 HDInsight 中的 Apache Spark 分析网站日志](apache-spark-custom-library-website-log-analysis.md)
-
-### <a name="creating-and-running-applications"></a>创建和运行应用程序
-* [使用 Scala 创建独立的应用程序](apache-spark-create-standalone-application.md)
-* [使用 Apache Livy 在 Apache Spark 群集中远程运行作业](apache-spark-livy-rest-interface.md)
-
-### <a name="tools-and-extensions"></a>工具和扩展
-* [使用 Azure Toolkit for IntelliJ 通过 VPN 远程调试 Apache Spark 应用程序](apache-spark-intellij-tool-plugin-debug-jobs-remotely.md)
-* [使用 Azure Toolkit for IntelliJ 通过 SSH 远程调试 Apache Spark 应用程序](apache-spark-intellij-tool-debug-remotely-through-ssh.md)
-* [使用 Azure Toolkit for Eclipse 中的 HDInsight 工具创建 Apache Spark 应用程序](apache-spark-eclipse-tool-plugin.md)
-* [在 HDInsight 上的 Apache Spark 群集中使用 Apache Zeppelin 笔记本](apache-spark-zeppelin-notebook.md)
-* [在 HDInsight 的 Apache Spark 群集中可用于 Jupyter Notebook 的内核](apache-spark-jupyter-notebook-kernels.md)
-* [Use external packages with Jupyter notebooks（将外部包与 Jupyter 笔记本配合使用）](apache-spark-jupyter-notebook-use-external-packages.md)
-* [Install Jupyter on your computer and connect to an HDInsight Spark cluster（在计算机上安装 Jupyter 并连接到 HDInsight Spark 群集）](apache-spark-jupyter-notebook-install-locally.md)
-
-### <a name="managing-resources"></a>管理资源
-* [管理 Azure HDInsight 中 Apache Spark 群集的资源](apache-spark-resource-manager.md)
-* [Track and debug jobs running on an Apache Spark cluster in HDInsight（跟踪和调试 HDInsight 中的 Apache Spark 群集上运行的作业）](apache-spark-job-debugging.md)
+> [!div class="nextstepaction"]
+> [使用 BI 工具分析数据](apache-spark-use-bi-tools.md)
